cluster/apps/default/ingresses/base/traefik/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  labels:
    app.kubernetes.io/name: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: authelia
        - name: local-only
      services:
        - name: api@internal
          kind: TraefikService
          namespace: ingress-system
  tls:
    secretName: "${SECRET_CERT_NAME_0}-prod-tls"
